small fixes + docstrings for common classes

--- a/app/templates/schedule/schedule.html
+++ b/app/templates/schedule/schedule.html
@@ -27,8 +27,8 @@
       {{ form.month(class="form-select form-select-ld") }}
     </div>
     <div class="col-xl-4">
-      <label class="form-label">{{ form.prepod.label }}</label>
-      {{ form.prepod (class="form-select form-select-ld") }}
+      <label class="form-label">{{ form.staff.label }}</label>
+      {{ form.staff (class="form-select form-select-ld") }}
     </div>
   </div>
 
