--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -32,12 +32,12 @@
         <span style="color: red;">[{{ error }}]</span>
       {% endfor %}
     </div>
-    {% if error %}
-      <div class="mb-3 fw-normal text-danger">
-        {{ error }}
+    {{ form.submit(class="w-100 btn btn-lg btn-primary") }}
+    {% if message %}
+      <div class="mb-3 mt-3 fw-normal text-success">
+        {{ message }}
       </div>
     {% endif %}
-    {{ form.submit(class="w-100 btn btn-lg btn-primary") }}
   </form>
 </main>
 {% endblock %}
