--- a/app/templates/programs/programs_choose_plan.html
+++ b/app/templates/programs/programs_choose_plan.html
@@ -4,5 +4,5 @@
     {% block title %} {{ title }} {% endblock %}
 </h1>
 <p></p>
-{% include '/main/choose_plan.html' %}
+{% include '/common/choose_plan.html' %}
 {% endblock %}
