--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -52,8 +52,8 @@
         <path fill-rule="evenodd" d="M11 5.5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793l-8.147 8.146a.5.5 0 0 0 .708.708L10 6.707V10.5a.5.5 0 0 0 1 0v-5z"/>
       </symbol>
     </svg>
-    <main>
-      <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark" style="width: 280px;">
+    <main class="d-flex flex-nowrap">
+      <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark" style="width: 275px;">
         <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-secondary text-decoration-none">
           <svg class="bi me-3" width="32" height="32"><use xlink:href="#apeks-ext"/></svg>
           <span class="fs-4">Сервисы для <br> Апекс-ВУЗ</span>
