--- a/app/static/css/sidebars.css
+++ b/app/static/css/sidebars.css
@@ -103,3 +103,9 @@ main {
           font-size: 3.5rem;
         }
       }
+
+@media (min-width: 576px) {
+    .h-sm-100 {
+        height: 100%;
+    }
+}
