--- a/app/templates/programs/wp_data.html
+++ b/app/templates/programs/wp_data.html
@@ -10,7 +10,7 @@
       <b>{{ plan_name }}</b>
     </div>
   </div>
-  {% if wp_list %}
+  {% if programs %}
   <div class="d-grid col-xl-8">
     <table class="col-md-7 mt-3 table">
       <tr class="table-success">
@@ -18,19 +18,21 @@
             <td>Согласование:</td>
         <td>Утверждение:</td>
       </tr>
-      {% for disc in wp_list %}
+      {% for wp in programs %}
         <tr>
           <td>
-            <a href="{{ url }}/mm/materials/view-wp?id={{ disc }}&work_program_id={{ wp_list[disc][3] }}" target="_blank"><svg class="bi me-2" width="16" height="16"><use xlink:href="#open"/></svg></a>
-            <span style="white-space: pre-line"><b>{{ wp_list[disc][0] }}</b></span>
+            <a href="{{ url }}/mm/materials/view-wp?id={{ programs[wp].get('disc_id') }}&work_program_id={{ wp }}" target="_blank">
+              <svg class="bi me-2" width="16" height="16"><use xlink:href="#open"/></svg>
+            </a>
+            <span style="white-space: pre-line"><b>{{ programs[wp].get('name') }}</b></span>
           </td>
           <td>
-            {% for sign in wp_list[disc][1] %}
+            {% for sign in programs[wp].get('signs') %}
               {{ sign }}
             {% endfor %}
           </td>
           <td>
-            {% if wp_list[disc][2] == '1' %}
+            {% if programs[wp].get('status') == '1' %}
               Утверждена
             {% else %}
               <b>Не утвержд.</b>
@@ -56,6 +58,40 @@
       </table>
     </div>
   {% endif %}
+
+  {% if duplicate %}
+    <div class="d-grid col-xl-8">
+      <table class="col-md-7 mt-3 table">
+        <tr class="table-info">
+            <td>В плане есть дубликаты рабочих программ:</td>
+        </tr>
+          {% for disc in duplicate %}
+            <tr>
+              <td><span style="white-space: pre-line"><b>{{ duplicate[disc] }}</b></span></td>
+            </tr>
+          {% endfor %}
+      </table>
+    </div>
+  {% endif %}
+
+  {% if wrong_name %}
+    <div class="d-grid col-xl-8">
+      <table class="col-md-7 mt-3 table">
+        <tr class="table-danger">
+            <td>Название дисциплины плана не соответствует названию программы:</td>
+        </tr>
+          {% for disc in wrong_name %}
+            <tr>
+              <td><span style="white-space: pre-line"><b>План - "{{ wrong_name[disc][0] }}"</b></span></td>
+            </tr>
+            <tr>
+              <td><span style="white-space: pre-line"><b>Программа - "{{ wrong_name[disc][1] }}"</b></span></td>
+            </tr>
+          {% endfor %}
+      </table>
+    </div>
+  {% endif %}
+
   {% if current_user.role in (config.ROLE_ADMIN, config.ROLE_METOD) %}
     <form action="" method="post">
       {% if no_program and current_user.role in (config.ROLE_ADMIN, ) %}
