--- a/app/templates/programs/dept_check.html
+++ b/app/templates/programs/dept_check.html
@@ -46,24 +46,26 @@
         <tr class="table-primary">
           <td><b>{{ plan }}</b></td>
         </tr>
-        {% for wp in wp_data[plan] %}
-          <tr class="table-success">
-            <td>
-              <span style="white-space: pre-line">{{ wp }}</span>
-              {% if wp_data[plan][wp][0] != "-->Программа отсутствует<--" and current_user.role in (config.ROLE_ADMIN, ) %}
-                <a href="{{ url_for('programs.wp_field_edit') }}?disc_id={{ wp_data[plan][wp][1] }}&parameter={{ wp_field }}"
-                   target="_blank"
-                   class="btn btn-success btn-block p-0"
-                   role="button">Edit</a>
-              {% endif %}
-            </td>
-          </tr>
-          <tr>
-            <td><span style="white-space: pre-line">{{ wp_data[plan][wp][0] }}</span></td>
-          </tr>
-          <tr>
-            <td></td>
-          </tr>
+        {% for disc in wp_data[plan] %}
+          {% for wp in wp_data[plan][disc] %}
+            <tr class="table-success">
+              <td>
+                <span style="white-space: pre-line">{{ disc }}</span>
+                {% if wp_data[plan][disc][wp] != "none" and current_user.role in (config.ROLE_ADMIN, ) %}
+                  <a href="{{ url_for('programs.wp_field_edit') }}?wp_id={{ wp }}&parameter={{ wp_field }}"
+                     target="_blank"
+                     class="btn btn-success btn-block p-0"
+                     role="button">Edit</a>
+                {% endif %}
+              </td>
+            </tr>
+            <tr>
+              <td><span style="white-space: pre-line">{{ wp_data[plan][disc][wp] }}</span></td>
+            </tr>
+            <tr>
+              <td></td>
+            </tr>
+          {% endfor %}
         {% endfor %}
       {% endfor %}
     </table>
