wp_fields view update, refactoring

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -128,7 +128,7 @@
           {% endif %}
           <!-- Программы -->
           <li>
-            <a href="{{ url_for('programs.dept_check') }}"
+            <a href="{{ url_for('programs.wp_dept_check') }}"
                class="nav-link {% if active == 'programs' %} active text-white {% else %} text-secondary {% endif %}"
                aria-current="page">
               <svg class="bi me-2" width="16" height="16"><use xlink:href="#programs"/></svg>
@@ -137,9 +137,9 @@
             {% if current_user.is_authenticated and current_user.role in (config.ROLE_ADMIN, config.ROLE_METOD, config.ROLE_BIBL) %}
               {% if active == "programs" %}
                 <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                    <li><a href="{{ url_for('programs.dept_check') }}" class="text-white rounded">Проверка по кафедре</a></li>
+                    <li><a href="{{ url_for('programs.wp_dept_check') }}" class="text-white rounded">Проверка по кафедре</a></li>
                   {% if current_user.role in (config.ROLE_ADMIN, ) %}
-                    <li><a href="{{ url_for('programs.dates_update') }}" class="text-white rounded">Обновление дат</a></li>
+                    <li><a href="{{ url_for('programs.wp_dates_update') }}" class="text-white rounded">Обновление дат</a></li>
                   {% endif %}
                     <li><a href="{{ url_for('programs.wp_fields_choose_plan') }}" class="text-white rounded">Значения полей</a></li>
                   {% if current_user.role in (config.ROLE_ADMIN, config.ROLE_METOD) %}
