--- a/app/templates/plans/plan_choose_plan.html
+++ b/app/templates/plans/plan_choose_plan.html
@@ -4,5 +4,5 @@
     {% block title %} {{ title }} {% endblock %}
 </h1>
 <p></p>
-{% include '/common/choose_plan.html' %}
+{% include 'common/choose_plan.html' %}
 {% endblock %}
