programs app update, refactoring

--- a/app/templates/programs/wp_fields.html
+++ b/app/templates/programs/wp_fields.html
@@ -23,23 +23,26 @@
 {% if wp_data %}
   <div>
     <table class="col-md-7 mt-3 table">
-      {% for wp in wp_data %}
-        <tr class="table-success">
-          <td>{{ wp }}
-            {% if wp_data[wp][0] != "-->Программа отсутствует<--" and current_user.role in (config.ROLE_ADMIN, ) %}
-            <a href="{{ url_for('programs.wp_field_edit') }}?disc_id={{ wp_data[wp][1] }}&parameter={{ wp_field }}"
-               target="_blank"
-               class="btn btn-success btn-block p-0"
-               role="button">Edit</a>
-            {% endif %}
-          </td>
-        </tr>
-        <tr>
-          <td><span style="white-space: pre-line">{{ wp_data[wp][0] }}</span></td>
-        </tr>
-        <tr>
-          <td></td>
-        </tr>
+      {% for disc in wp_data %}
+        {% for wp in wp_data[disc] %}
+          <tr class="table-success">
+            <td>
+              <span style="white-space: pre-line">{{ disc }}</span>
+              {% if wp != "none" and current_user.role in (config.ROLE_ADMIN, ) %}
+                <a href="{{ url_for('programs.wp_field_edit') }}?wp_id={{ wp }}&parameter={{ wp_field }}"
+                   target="_blank"
+                   class="btn btn-success btn-block p-0"
+                   role="button">Edit</a>
+              {% endif %}
+            </td>
+          </tr>
+          <tr>
+            <td><span style="white-space: pre-line">{{ wp_data[disc][wp] }}</span></td>
+          </tr>
+          <tr>
+            <td></td>
+          </tr>
+        {% endfor %}
       {% endfor %}
     </table>
   </div>
