bootstrap studio design update, small template fixes

--- a/app/templates/programs/wp_title.html
+++ b/app/templates/programs/wp_title.html
@@ -96,7 +96,7 @@
     </div>
   </div>
   <div class="d-grid mt-3 mb-3 col-xl-8">
-    {{ form.fields_data(class="btn btn-success mb-2") }}
+    {{ form.title_pages(class="btn btn-success mb-2") }}
   </div>
 </form>
 
