--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,34 +1,48 @@
 {% extends 'base.html' %}
 {% block content %}
-<main class="form-signin d-grid col-xl-4">
-  <form action="" method="post">
-    {{ form.hidden_tag() }}
-    <h1 class="h3 mb-3 fw-normal">{{ title }}</h1>
-    <div class="mb-3 form-floating" >
-      {{ form.username(class="form-control") }}
-      <label>{{ form.username.label }}</label>
-      {% for error in form.username.errors %}
-        <span style="color: red;">[{{ error }}]</span>
-      {% endfor %}
-    </div>
-    <div class="mb-3 form-floating">
-      {{ form.password(class="form-control") }}
-      <label>{{ form.password.label }}</label>
-      {% for error in form.password.errors %}
-        <span style="color: red;">[{{ error }}]</span>
-      {% endfor %}
-    </div>
-      {% if error %}
-        <div class="mb-3 fw-normal text-danger">
-          {{ error }}
+<div class="container-fluid">
+    <h4 class="text-dark mb-1" style="text-align: center;"><span style="color: rgb(33, 37, 41);">{% block title %}Авторизация{% endblock %}</span><br></h4>
+</div>
+<section class="position-relative py-4 py-xl-5">
+    <div class="container">
+        <div class="row d-flex justify-content-center">
+            <div class="col-md-6 col-xl-4">
+                <div class="card mb-5">
+                    <div class="card-body d-flex flex-column align-items-center">
+                        <div class="bs-icon-xl bs-icon-circle bs-icon-primary bs-icon my-4">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-person">
+                                <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"></path>
+                            </svg>
+                        </div>
+                        <form class="text-center" method="post">
+                            {{ form.hidden_tag() }}
+
+                            <div class="form-floating mb-3">
+                                <input class="form-control" type="text" id="username" name="username" placeholder="{{ form.username.data }}">
+                                <label class="form-label">{{ form.username.label }}</label>
+                                    {% for error in form.username.errors %}
+                                        <span style="color: var(--bs-danger);">{{ error }}</span>
+                                    {% endfor %}
+                            </div>
+
+                            <div class="form-floating mb-3">
+                                <input class="form-control" type="password" id="password" name="password" placeholder="{{ form.password.data }}">
+                                <label class="form-label">{{ form.password.label }}</label>
+                                      {% for error in form.password.errors %}
+                                          <span style="color: var(--bs-danger);">{{ error }}</span>
+                                      {% endfor %}
+                            </div>
+                            {% if error %}
+                                <span id="error" style="color: var(--bs-danger);">{{ error }}</span>
+                            {% endif %}
+
+                            <div class="mb-3"><button class="btn btn-primary d-block w-100" id="submit" type="submit" name="submit">Войти</button></div>
+                            <div class="form-check" style="text-align: left;"><input class="form-check-input" type="checkbox" id="formRememberMe" name="remember_me"><label class="form-check-label" id="remember_me_label" for="formRememberMe">Запомнить</label></div>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
-      {% endif %}
-    <div class="checkbox mb-3">
-      <label>
-        {{ form.remember_me() }} {{ form.remember_me.label }}
-      </label>
     </div>
-    {{ form.submit(class="w-100 btn btn-lg btn-primary") }}
-  </form>
-</main>
+</section>
 {% endblock %}
