--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,16 +1,61 @@
 {% extends 'base.html' %}
+{% block title %}
+Главная
+{% endblock %}
 {% block content %}
-<h1 class="display-6">
-  {% block title %}
-    Расширения базовых функций Апекс-ВУЗ
-  {% endblock %}
-</h1>
-<p class="lead">
-  Дополнительные модули, взаимодействующие с системой посредством REST API<br>
-  <br>
-  <b>Возможности:</b>
-  <li>выгрузка расписания преподавателя,</li>
-  <li>формирование отчета о нагрузке за месяц / семестр</li>
-  <li>проверка заполнения рабочих программ по кафедре</li>
-</p>
+<div class="container">
+    <div class="row mb-1">
+        <div class="col-md-8 col-xl-6 text-center mx-auto">
+            <h2 style="color: rgb(58,59,69);">Дополнительные модули, взаимодействующие с системой посредством REST API<br></h2>
+            <p class="w-lg-50" style="color: rgb(58,59,69);">Возможности:<br></p>
+        </div>
+    </div>
+    <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3">
+        <div class="col">
+            <div class="card">
+                <div class="card-body p-4">
+                    <div class="bs-icon-md bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center d-inline-block mb-3 bs-icon"><i class="far fa-calendar-alt"></i></div>
+                    <h4 class="card-title" style="color: rgb(58,59,69);">Расписание</h4>
+                    <p class="card-text">выгрузка расписания преподавателя (iCal, xlsx)<br></p>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <div class="card-body p-4">
+                    <div class="bs-icon-md bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center d-inline-block mb-3 bs-icon"><i class="fas fa-receipt"></i></div>
+                    <h4 class="card-title" style="color: rgb(58,59,69);">Нагрузка</h4>
+                    <p class="card-text">формирование отчета о нагрузке за месяц / семестр<br></p>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <div class="card-body p-4">
+                    <div class="bs-icon-md bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center d-inline-block mb-3 bs-icon"><i class="fas fa-clipboard-list"></i></div>
+                    <h4 class="card-title" style="color: rgb(58,59,69);">Программы</h4>
+                    <p class="card-text">проверка заполнения полей рабочих программ</p>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <div class="card-body p-4">
+                    <div class="bs-icon-md bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center d-inline-block mb-3 bs-icon"><i class="fas fa-layer-group"></i></div>
+                    <h4 class="card-title" style="color: rgb(58,59,69);">Учебные планы</h4>
+                    <p class="card-text">работа с компетенциями и их индикаторами</p>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <div class="card-body p-4">
+                    <div class="bs-icon-md bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center d-inline-block mb-3 bs-icon"><i class="fas fa-book-open"></i></div>
+                    <h4 class="card-title" style="color: rgb(58,59,69);">Обеспечение</h4>
+                    <p class="card-text">загрузка обеспечивающих материалов в рабочие программы</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
